--- a/public/index.html
+++ b/public/index.html
@@ -1136,6 +1136,7 @@
           <i class="fas fa-shopping-cart"></i>
           <span>Keranjang</span>
         </a></li>
+        <li><a href="pages/login.html" class="nav-link">Login</a></li>
       </ul>
       <button class="mobile-menu-btn" id="mobile-menu-btn">
         <i class="fas fa-bars"></i>
