--- a/public/pages/lupa_password.html
+++ b/public/pages/lupa_password.html
@@ -18,7 +18,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
+            overflow: auto;
             position: relative;
         }
 
@@ -594,13 +594,13 @@
     </style>
 </head>
 <body>
-    <!-- Bubbles -->
+    <!-- Bubbles
     <div class="bubble"></div>
     <div class="bubble"></div>
     <div class="bubble"></div>
     <div class="bubble"></div>
     <div class="bubble"></div>
-    <div class="bubble"></div>
+    <div class="bubble"></div> -->
 
     <!-- Ocean Waves -->
     <div class="ocean">
