--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,8 @@
             box-sizing: border-box;
         }
 
-        html, body {
+        html,
+        body {
             height: 100%;
             overflow-x: hidden;
         }
@@ -857,16 +859,71 @@
 
         /* Animations */
         @keyframes wave {
-            0%, 100% { transform: rotate(0deg); }
-            25% { transform: rotate(10deg); }
-            75% { transform: rotate(-10deg); }
+
+            0%,
+            100% {
+                transform: rotate(0deg);
+            }
+
+            25% {
+                transform: rotate(10deg);
+            }
+
+            75% {
+                transform: rotate(-10deg);
+            }
         }
 
         .menu-item:hover .icon {
             animation: wave 0.5s ease;
         }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-btn {
+            background: #ffffff;
+            border: 1px solid #ddd;
+            padding: 6px 12px;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 12px;
+            transition: 0.2s;
+        }
+
+        .dropdown-btn:hover {
+            background: #f1f1f1;
+        }
+
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            right: 0;
+            margin-top: 6px;
+            background: #fff;
+            border: 1px solid #ddd;
+            width: 130px;
+            border-radius: 6px;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            z-index: 10;
+        }
+
+        .dropdown-item {
+            padding: 8px 12px;
+            font-size: 12px;
+            cursor: pointer;
+            transition: 0.2s;
+        }
+
+        .dropdown-item:hover {
+            background: #f3f3f3;
+        }
     </style>
 </head>
+
 <body>
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
@@ -880,39 +937,42 @@
                 <span class="badge">ADMIN</span>
             </div>
         </div>
-
+        <a href="#" class="menu-item" onclick="location.href='../dashboard/kasir.html'">
+            <span class="icon">🖥️</span>
+            <span>Kasir</span>
+        </a>
         <div class="menu-section">
             <div class="menu-label">Menu Utama</div>
             <a href="#" class="menu-item active">
                 <span class="icon">📊</span>
                 <span>Dashboard</span>
             </a>
-            <a href="#" class="menu-item">
-                <span class="icon">👥</span>
-                <span>Pengguna</span>
+            <a href="#" class="menu-item" onclick="location.href='../dashboard/master_data.html'">
+                <span class="icon">🧾</span>
+                <span>Master Data</span>
                 <span class="badge">24</span>
             </a>
             <a href="#" class="menu-item">
-                <span class="icon">🎣</span>
-                <span>Produk</span>
+                <span class="icon">🚚</span>
+                <span>Barang Masuk</span>
             </a>
             <a href="#" class="menu-item">
                 <span class="icon">📦</span>
-                <span>Pesanan</span>
+                <span>Barang Keluar</span>
                 <span class="badge">8</span>
             </a>
             <a href="#" class="menu-item">
-                <span class="icon">💰</span>
-                <span>Transaksi</span>
+                <span class="icon">📝</span>
+                <span>Generate Laporan</span>
+            </a>
+            <a href="#" class="menu-item">
+                <span class="icon">📜</span>
+                <span>Riwayat Transaksi</span>
             </a>
         </div>
 
         <div class="menu-section">
             <div class="menu-label">Manajemen</div>
-            <a href="#" class="menu-item">
-                <span class="icon">📝</span>
-                <span>Laporan</span>
-            </a>
             <a href="#" class="menu-item">
                 <span class="icon">⚙️</span>
                 <span>Pengaturan</span>
@@ -921,15 +981,11 @@
                 <span class="icon">🔔</span>
                 <span>Notifikasi</span>
             </a>
-        </div>
+            <a href="#" class="menu-item" onclick="location.href='../pages/login.html'">
+                <span class="icon">🚪</span>
+                <span>Logout</span>
+            </a>
 
-        <div class="user-profile">
-            <div class="user-avatar">👨‍💼</div>
-            <div class="user-info">
-                <h4>Admin Jaya</h4>
-                <p>admin@mekarjaya.com</p>
-            </div>
-            <button class="logout-btn" title="Logout">🚪</button>
         </div>
     </aside>
 
@@ -954,11 +1010,11 @@
             </div>
         </div>
 
-        <!-- Quick Actions -->
+        <!-- Quick Actions
         <div class="quick-actions">
             <button class="quick-action-btn">
                 <div class="icon">➕</div>
-                <div class="label">Tambah Produk</div>
+                <div class="label">Tambah Pegawai</div>
             </button>
             <button class="quick-action-btn">
                 <div class="icon">👤</div>
@@ -972,48 +1028,130 @@
                 <div class="icon">💬</div>
                 <div class="label">Pesan Masuk</div>
             </button>
-        </div>
+        </div> -->
 
         <!-- Stats Cards -->
         <div class="stats-grid">
             <div class="stat-card">
                 <div class="stat-header">
-                    <div class="stat-icon blue">👥</div>
-                    <div class="stat-trend up">↑ 12.5%</div>
-                </div>
-                <div class="stat-label">Total Pengguna</div>
-                <div class="stat-value">1,245</div>
-                <div class="stat-description">+127 pengguna baru bulan ini</div>
-            </div>
-
-            <div class="stat-card">
-                <div class="stat-header">
                     <div class="stat-icon green">💰</div>
-                    <div class="stat-trend up">↑ 8.3%</div>
+
+                    <!-- Dropdown Filter -->
+                    <div class="dropdown">
+                        <button class="dropdown-btn stat-trend up" id="dropdownBtn">Hari Ini ▾</button>
+                        <div class="dropdown-menu" id="dropdownMenu">
+                            <div class="dropdown-item" data-range="hari">Hari Ini</div>
+                            <div class="dropdown-item" data-range="minggu">1 Minggu</div>
+                            <div class="dropdown-item" data-range="bulan">1 Bulan</div>
+                            <div class="dropdown-item" data-range="tahun">1 Tahun</div>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="stat-label">Total Pendapatan</div>
-                <div class="stat-value">Rp 45.2M</div>
-                <div class="stat-description">+Rp 3.5M dari bulan lalu</div>
+                <div class="stat-value" id="incomeValue">Rp 45.2M</div>
+                <div class="stat-description" id="incomeDesc">+Rp 3.5M dari bulan lalu</div>
+            </div>
+
+            <script>
+                const dropdownBtn = document.getElementById("dropdownBtn");
+                const dropdownMenu = document.getElementById("dropdownMenu");
+                const valueEl = document.getElementById("incomeValue");
+                const descEl = document.getElementById("incomeDesc");
+
+                dropdownBtn.addEventListener("click", () => {
+                    dropdownMenu.style.display =
+                        dropdownMenu.style.display === "block" ? "none" : "block";
+                });
+
+                // Jika salah satu item diklik
+                document.querySelectorAll(".dropdown-item").forEach(item => {
+                    item.addEventListener("click", () => {
+
+                        // Ubah tulisan pada tombol dropdown
+                        dropdownBtn.textContent = item.textContent + " ▾";
+
+                        // Tutup menu
+                        dropdownMenu.style.display = "none";
+
+                        // Update sesuai range
+                        switch (item.dataset.range) {
+                            case "hari":
+                                valueEl.textContent = "Rp 45.2M";
+                                descEl.textContent = "+Rp 3.5M dari bulan lalu";
+                                break;
+                            case "minggu":
+                                valueEl.textContent = "Rp 112M";
+                                descEl.textContent = "+Rp 9.8M dari minggu lalu";
+                                break;
+                            case "bulan":
+                                valueEl.textContent = "Rp 530M";
+                                descEl.textContent = "+Rp 42M dari bulan lalu";
+                                break;
+                            case "tahun":
+                                valueEl.textContent = "Rp 6.4B";
+                                descEl.textContent = "+Rp 1.2B dari tahun lalu";
+                                break;
+                        }
+                    });
+                });
+
+                // Klik luar → tutup dropdown
+                document.addEventListener("click", (e) => {
+                    if (!dropdownBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
+                        dropdownMenu.style.display = "none";
+                    }
+                });
+            </script>
+
+            <div class="stat-card">
+                <div class="stat-header">
+                    <div class="stat-icon yellow">🚚</div>
+
+                    <!-- Dropdown Filter -->
+                    <div class="dropdown">
+                        <button class="dropdown-btn stat-trend up" id="dropdownBtn">Hari Ini ▾</button>
+                        <div class="dropdown-menu" id="dropdownMenu">
+                            <div class="dropdown-item" data-range="hari">Hari Ini</div>
+                            <div class="dropdown-item" data-range="minggu">1 Minggu</div>
+                            <div class="dropdown-item" data-range="bulan">1 Bulan</div>
+                            <div class="dropdown-item" data-range="tahun">1 Tahun</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stat-label">total barang masuk</div>
+                <div class="stat-value" id="incomeValue">42</div>
+                <div class="stat-description" id="incomeDesc">42 barang masuk pada hari ini</div>
             </div>
 
             <div class="stat-card">
                 <div class="stat-header">
-                    <div class="stat-icon yellow">📦</div>
-                    <div class="stat-trend down">↓ 3.2%</div>
-                </div>
-                <div class="stat-label">Pesanan Aktif</div>
-                <div class="stat-value">342</div>
-                <div class="stat-description">86 pesanan pending approval</div>
-            </div>
+                    <div class="stat-icon red">📦</div>
 
+                    <!-- Dropdown Filter -->
+                    <div class="dropdown">
+                        <button class="dropdown-btn stat-trend up" id="dropdownBtn">Hari Ini ▾</button>
+                        <div class="dropdown-menu" id="dropdownMenu">
+                            <div class="dropdown-item" data-range="hari">Hari Ini</div>
+                            <div class="dropdown-item" data-range="minggu">1 Minggu</div>
+                            <div class="dropdown-item" data-range="bulan">1 Bulan</div>
+                            <div class="dropdown-item" data-range="tahun">1 Tahun</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stat-label">total barang keluar</div>
+                <div class="stat-value" id="incomeValue">42</div>
+                <div class="stat-description" id="incomeDesc">42 barang keluar pada hari ini</div>
+            </div>
             <div class="stat-card">
                 <div class="stat-header">
-                    <div class="stat-icon red">🎣</div>
-                    <div class="stat-trend up">↑ 15.7%</div>
+                    <div class="stat-icon blue">👥</div>
+                    <div class="stat-trend up">3 Pegawai Aktif</div>
                 </div>
-                <div class="stat-label">Produk Terjual</div>
-                <div class="stat-value">2,847</div>
-                <div class="stat-description">+389 produk minggu ini</div>
+                <div class="stat-label">Total Pegawai</div>
+                <div class="stat-value">1,245</div>
             </div>
         </div>
 
@@ -1254,13 +1392,13 @@
         const overlay = document.getElementById('overlay');
 
         // Toggle sidebar
-        menuToggle.addEventListener('click', function() {
+        menuToggle.addEventListener('click', function () {
             sidebar.classList.toggle('active');
             overlay.classList.toggle('active');
         });
 
         // Close sidebar when clicking overlay
-        overlay.addEventListener('click', function() {
+        overlay.addEventListener('click', function () {
             sidebar.classList.remove('active');
             overlay.classList.remove('active');
         });
@@ -1268,11 +1406,11 @@
         // Menu items
         const menuItems = document.querySelectorAll('.menu-item');
         menuItems.forEach(item => {
-            item.addEventListener('click', function(e) {
+            item.addEventListener('click', function (e) {
                 e.preventDefault();
                 menuItems.forEach(i => i.classList.remove('active'));
                 this.classList.add('active');
-                
+
                 if (window.innerWidth <= 768) {
                     sidebar.classList.remove('active');
                     overlay.classList.remove('active');
@@ -1282,17 +1420,17 @@
 
         // Logout
         const logoutBtn = document.querySelector('.logout-btn');
-        logoutBtn.addEventListener('click', function() {
+        logoutBtn.addEventListener('click', function () {
             if (confirm('Apakah Anda yakin ingin keluar?')) {
                 alert('Logout berhasil! 👋');
-                window.location.href = '#login';
+                window.location.href = '../pages/login.html';
             }
         });
 
         // Quick actions
         const quickActionBtns = document.querySelectorAll('.quick-action-btn');
         quickActionBtns.forEach(btn => {
-            btn.addEventListener('click', function() {
+            btn.addEventListener('click', function () {
                 const label = this.querySelector('.label').textContent;
                 alert(`Membuka: ${label}`);
             });
@@ -1301,12 +1439,12 @@
         // Table actions
         const actionBtns = document.querySelectorAll('.action-btn');
         actionBtns.forEach(btn => {
-            btn.addEventListener('click', function(e) {
+            btn.addEventListener('click', function (e) {
                 e.stopPropagation();
                 const icon = this.textContent.trim();
                 const row = this.closest('tr');
                 const id = row.querySelector('td:first-child')?.textContent || 'Item';
-                
+
                 if (icon === '👁️') {
                     alert(`Melihat detail untuk ${id}`);
                 } else if (icon === '✏️') {
@@ -1324,13 +1462,13 @@
 
         // Notifications
         const notificationBtn = document.querySelector('.notification-btn');
-        notificationBtn.addEventListener('click', function() {
+        notificationBtn.addEventListener('click', function () {
             alert('🔔 Anda memiliki 5 notifikasi baru:\n\n1. Pesanan baru #ORD-007\n2. Pembayaran diterima #ORD-004\n3. Review baru dari pelanggan\n4. Stok produk menipis\n5. Pesan dari customer service');
         });
 
         // Search
         const searchInput = document.querySelector('.search-box input');
-        searchInput.addEventListener('keypress', function(e) {
+        searchInput.addEventListener('keypress', function (e) {
             if (e.key === 'Enter') {
                 const query = this.value;
                 if (query) {
@@ -1342,13 +1480,13 @@
         // Filter buttons
         const filterBtns = document.querySelectorAll('.filter-btn');
         filterBtns.forEach(btn => {
-            btn.addEventListener('click', function() {
+            btn.addEventListener('click', function () {
                 alert('Filter options:\n\n📅 Hari Ini\n📅 Minggu Ini\n📅 Bulan Ini\n📅 Custom Range');
             });
         });
 
         // Responsive
-        window.addEventListener('resize', function() {
+        window.addEventListener('resize', function () {
             if (window.innerWidth > 768) {
                 sidebar.classList.remove('active');
                 overlay.classList.remove('active');
@@ -1356,9 +1494,10 @@
         });
 
         // Prevent sidebar close when clicking inside
-        sidebar.addEventListener('click', function(e) {
+        sidebar.addEventListener('click', function (e) {
             e.stopPropagation();
         });
     </script>
 </body>
+
 </html>
