--- a/public/dashboard/kasir.html
+++ b/public/dashboard/kasir.html
@@ -865,8 +865,8 @@
             <span class="icon">🖥️</span>
             <span>Kasir</span>
         </a>
-        <div class="menu-section" onclick="location.href='../dashboard/dashboard.html'">
-            <div class="menu-label">Menu Utama</div>
+        <div class="menu-section" >
+            <div class="menu-label" onclick="location.href='../dashboard/dashboard.html'">Menu Utama</div>
             <a href="#" class="menu-item ">
                 <span class="icon">📊</span>
                 <span>Dashboard</span>
