--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -921,6 +921,108 @@
         .dropdown-item:hover {
             background: #f3f3f3;
         }
+
+        /* Loading */
+        .loading-overlay {
+            position: fixed;
+            inset: 0;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(8px);
+            z-index: 9999;
+        }
+
+        .loading-overlay.active {
+            display: flex;
+        }
+
+        /* Card loading */
+        .dots-loader {
+            background: linear-gradient(120deg,
+                    rgba(90, 167, 255, 0.35),
+                    rgba(255, 255, 255, 0.05));
+            backdrop-filter: blur(20px);
+            padding: 35px 55px;
+            border-radius: 24px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            box-shadow:
+                0 8px 30px rgba(90, 167, 255, 0.35),
+                0 12px 40px rgba(0, 0, 0, 0.15);
+            text-align: center;
+        }
+
+
+        /* Dots animation wrapper */
+        .dots {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            margin-bottom: 15px;
+        }
+
+        /* Each dot */
+        .dots span {
+            width: 12px;
+            height: 12px;
+            background: #7b5dfc;
+            border-radius: 50%;
+            animation: pulseDots 1.2s infinite ease-in-out;
+            box-shadow: 0 0 10px rgba(123, 93, 252, 0.6);
+        }
+
+        /* Animation delays for wave effect */
+        .dots span:nth-child(1) {
+            animation-delay: 0s;
+        }
+
+        .dots span:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .dots span:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+
+        /* Pulse keyframes */
+        @keyframes pulseDots {
+            0% {
+                transform: scale(0.6);
+                opacity: 0.5;
+            }
+
+            40% {
+                transform: scale(1.2);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(0.6);
+                opacity: 0.5;
+            }
+        }
+
+        /* Fade Up saat muncul */
+        @keyframes fadeUp {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Loading text */
+        .loading-title {
+            font-size: 14px;
+            color: #444;
+            letter-spacing: 1px;
+            margin: 0;
+        }
     </style>
 </head>
 
@@ -947,10 +1049,9 @@
                 <span class="icon">📊</span>
                 <span>Dashboard</span>
             </a>
-            <a href="#" class="menu-item" onclick="location.href='../dashboard/master_data.html'">
+            <a href="../dashboard/master_data.html" class="menu-item" data-loading="true">
                 <span class="icon">🧾</span>
                 <span>Master Data</span>
-                <span class="badge">24</span>
             </a>
             <a href="#" class="menu-item">
                 <span class="icon">🚚</span>
@@ -989,6 +1090,59 @@
         </div>
     </aside>
 
+    <!-- loading -->
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-content dots-loader">
+            <div class="dots">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <p class="loading-title">Loading...</p>
+        </div>
+    </div>
+
+
+    <script>
+        // Fungsi untuk menampilkan loading
+        function showLoading() {
+            const loadingOverlay = document.getElementById('loadingOverlay');
+            loadingOverlay.classList.add('active');
+        }
+
+        // Fungsi untuk menyembunyikan loading
+        function hideLoading() {
+            const loadingOverlay = document.getElementById('loadingOverlay');
+            loadingOverlay.classList.remove('active');
+        }
+
+        // Versi lebih modern dengan data attributes
+        document.addEventListener('DOMContentLoaded', function () {
+            const menuItems = document.querySelectorAll('.menu-item[data-loading="true"]');
+
+            menuItems.forEach(item => {
+                item.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const targetUrl = this.href;
+
+                    showLoading();
+
+                    setTimeout(() => {
+                        window.location.href = targetUrl;
+                    }, 1200);
+                });
+            });
+        });
+
+        // Untuk handle manual loading (jika perlu)
+        function navigateWithLoading(url) {
+            showLoading();
+            setTimeout(() => {
+                location.href = url;
+            }, 1500);
+        }
+    </script>
+    
     <!-- Main Content -->
     <main class="main-content" id="mainContent">
         <!-- Header -->
