--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -1039,7 +1039,7 @@
                 <span class="badge">ADMIN</span>
             </div>
         </div>
-        <a href="#" class="menu-item" onclick="location.href='../dashboard/kasir.html'">
+        <a href="../dashboard/kasir.html" class="menu-item" data-loading="true">
             <span class="icon">🖥️</span>
             <span>Kasir</span>
         </a>
@@ -1062,11 +1062,11 @@
                 <span>Barang Keluar</span>
                 <span class="badge">8</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="../dashboard/generate_laporan.html" class="menu-item" data-loading="true">
                 <span class="icon">📝</span>
                 <span>Generate Laporan</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="../dashboard/riwayat_transaksi.html" class="menu-item" data-loading="true">
                 <span class="icon">📜</span>
                 <span>Riwayat Transaksi</span>
             </a>
@@ -1074,11 +1074,11 @@
 
         <div class="menu-section">
             <div class="menu-label">Manajemen</div>
-            <a href="#" class="menu-item">
+            <a href="../dashboard/pengaturan.html" class="menu-item" data-loading="true">
                 <span class="icon">⚙️</span>
                 <span>Pengaturan</span>
             </a>
-            <a href="#" class="menu-item">
+            <a href="../dashboard/notifikasi.html" class="menu-item" data-loading="true">
                 <span class="icon">🔔</span>
                 <span>Notifikasi</span>
             </a>
@@ -1142,7 +1142,7 @@
             }, 1500);
         }
     </script>
-    
+
     <!-- Main Content -->
     <main class="main-content" id="mainContent">
         <!-- Header -->
