--- a/public/dashboard/kasir.html
+++ b/public/dashboard/kasir.html
@@ -362,9 +362,10 @@
             display: flex;
             flex-direction: column;
             max-height: 100%;
-            overflow: hidden; 
+            overflow: hidden;
             overflow-y: auto;
-            scrollbar-width: none;/*    garis scroll hilang */
+            scrollbar-width: none;
+            /*    garis scroll hilang */
         }
 
         .cart-header {
@@ -372,7 +373,8 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
-            flex-shrink: 0; /* Tidak mengecil */
+            flex-shrink: 0;
+            /* Tidak mengecil */
         }
 
         .cart-header h3 {
@@ -400,7 +402,8 @@
 
         .cart-items {
             flex: 1;
-            overflow-y: auto; /* Ini yang bisa di-scroll */
+            overflow-y: auto;
+            /* Ini yang bisa di-scroll */
             margin-bottom: 20px;
             padding-right: 5px;
             min-height: 200px;
@@ -515,7 +518,8 @@
         .cart-summary {
             border-top: 2px solid rgba(14, 116, 144, 0.1);
             padding-top: 20px;
-            flex-shrink: 0; /* Tidak mengecil */
+            flex-shrink: 0;
+            /* Tidak mengecil */
         }
 
         .summary-row {
@@ -544,7 +548,8 @@
 
         .checkout-section {
             margin-top: 15px;
-            flex-shrink: 0; /* Tidak mengecil */
+            flex-shrink: 0;
+            /* Tidak mengecil */
         }
 
         .customer-info {
@@ -845,6 +850,111 @@
             font-weight: 700;
             box-shadow: 0 2px 8px rgba(244, 63, 94, 0.4);
         }
+
+        /* Loading */
+        .loading-overlay {
+            position: fixed;
+            inset: 0;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(8px);
+            z-index: 9999;
+        }
+
+        .loading-overlay.active {
+            display: flex;
+        }
+
+        /* Card loading */
+        .dots-loader {
+            background: linear-gradient(120deg,
+                    rgba(90, 167, 255, 0.35),
+                    rgba(255, 255, 255, 0.05));
+            backdrop-filter: blur(20px);
+            padding: 35px 55px;
+            border-radius: 24px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            box-shadow:
+                0 8px 30px rgba(90, 167, 255, 0.35),
+                0 12px 40px rgba(0, 0, 0, 0.15);
+            text-align: center;
+        }
+
+
+        /* Dots animation wrapper */
+        .dots {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            margin-bottom: 15px;
+        }
+
+        /* Each dot */
+        .dots span {
+            width: 12px;
+            height: 12px;
+            background: #7b5dfc;
+            border-radius: 50%;
+            animation: pulseDots 1.2s infinite ease-in-out;
+            box-shadow: 0 0 10px rgba(123, 93, 252, 0.6);
+        }
+
+        /* Animation delays for wave effect */
+        .dots span:nth-child(1) {
+            animation-delay: 0s;
+        }
+
+        .dots span:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .dots span:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+
+        /* Pulse keyframes */
+        @keyframes pulseDots {
+            0% {
+                transform: scale(0.6);
+                opacity: 0.5;
+            }
+
+            40% {
+                transform: scale(1.2);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(0.6);
+                opacity: 0.5;
+            }
+        }
+
+        /* Fade Up saat muncul */
+        @keyframes fadeUp {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Loading text */
+        .loading-title {
+            font-size: 14px;
+            color: #444;
+            letter-spacing: 1px;
+            margin: 0;
+        }
+         .menu-item:hover .icon {
+            animation: wave 0.5s ease;
+        }
     </style>
 </head>
 
@@ -865,16 +975,15 @@
             <span class="icon">🖥️</span>
             <span>Kasir</span>
         </a>
-        <div class="menu-section" >
-            <div class="menu-label" onclick="location.href='../dashboard/dashboard.html'">Menu Utama</div>
-            <a href="#" class="menu-item ">
+        <div class="menu-section">
+            <div class="menu-label">Menu Utama</div>
+            <a href="#" class="menu-item " onclick="location.href='../dashboard/dashboard.html'">
                 <span class="icon">📊</span>
                 <span>Dashboard</span>
             </a>
-            <a href="#" class="menu-item" onclick="location.href='../dashboard/master_data.html'">
+            <a href="../dashboard/master_data.html" class="menu-item" data-loading="true">
                 <span class="icon">🧾</span>
                 <span>Master Data</span>
-                <span class="badge">24</span>
             </a>
             <a href="#" class="menu-item">
                 <span class="icon">🚚</span>
@@ -1361,6 +1470,61 @@
             }
         });
     </script>
+
+    <!-- loading -->
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-content dots-loader">
+            <div class="dots">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <p class="loading-title">Loading...</p>
+        </div>
+    </div>
+
+
+    <script>
+        // Fungsi untuk menampilkan loading
+        function showLoading() {
+            const loadingOverlay = document.getElementById('loadingOverlay');
+            loadingOverlay.classList.add('active');
+        }
+
+        // Fungsi untuk menyembunyikan loading
+        function hideLoading() {
+            const loadingOverlay = document.getElementById('loadingOverlay');
+            loadingOverlay.classList.remove('active');
+        }
+
+        // Versi lebih modern dengan data attributes
+        document.addEventListener('DOMContentLoaded', function () {
+            const menuItems = document.querySelectorAll('.menu-item[data-loading="true"]');
+
+            menuItems.forEach(item => {
+                item.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const targetUrl = this.href;
+
+                    showLoading();
+
+                    setTimeout(() => {
+                        window.location.href = targetUrl;
+                    }, 1200);
+                });
+            });
+        });
+
+        // Untuk handle manual loading (jika perlu)
+        function navigateWithLoading(url) {
+            showLoading();
+            setTimeout(() => {
+                location.href = url;
+            }, 1500);
+        }
+    </script>
+
+
 </body>
 
 </html>
