--- a/public/dashboard/pengaturan.html
+++ b/public/dashboard/pengaturan.html
@@ -963,10 +963,10 @@
                 <span>🔒</span>
                 <span>Keamanan</span>
             </button>
-            <button class="tab-btn" data-tab="preferences">
+            <!-- <button class="tab-btn" data-tab="preferences">
                 <span>🎨</span>
                 <span>Preferensi</span>
-            </button>
+            </button> -->
         </div>
 
         <!-- Tab Content: Profile -->
@@ -1374,7 +1374,7 @@
         </div>
 
         <!-- Tab Content: Preferences -->
-        <div class="tab-content" id="preferences">
+        <!-- <div class="tab-content" id="preferences">
             <div class="card">
                 <div class="card-header">
                     <h3><span>🎨</span> Preferensi Tampilan</h3>
@@ -1457,7 +1457,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </main>
 
     <!-- Modal: View Employee Detail -->
