--- a/public/dashboard/admin/kasir.html
+++ b/public/dashboard/admin/kasir.html
@@ -973,7 +973,7 @@
         </a>
         <div class="menu-section">
             <div class="menu-label">Menu Utama</div>
-            <a href="#" class="menu-item " onclick="location.href='../dashboard/dashboard.html'">
+            <a href="#" class="menu-item " onclick="location.href='../admin/dashboard.html'">
                 <span class="icon">📊</span>
                 <span>Dashboard</span>
             </a>
