--- a/public/dashboard/admin/barang_keluar.html
+++ b/public/dashboard/admin/barang_keluar.html
@@ -1058,34 +1058,34 @@
                 <span class="badge">ADMIN</span>
             </div>
         </div>
-        <a href="../dashboard/kasir.html" class="menu-item" data-loading="true">
+        <a href="../admin/kasir.html" class="menu-item" data-loading="true">
             <span class="icon">🖥️</span>
             <span>Kasir</span>
         </a>
         <div class="menu-section">
             <div class="menu-label">Menu Utama</div>
-            <a href="../dashboard/dashboard.html" class="menu-item" data-loading="true">
+            <a href="../admin/dashboard.html" class="menu-item" data-loading="true">
                 <span class="icon">📊</span>
                 <span>Dashboard</span>
             </a>
-            <a href="../dashboard/master_data.html" class="menu-item" data-loading="true">
+            <a href="../admin/master_data.html" class="menu-item" data-loading="true">
                 <span class="icon">🧾</span>
                 <span>Master Data</span>
             </a>
-            <a href="../dashboard/barang_masuk.html" class="menu-item" data-loading="true">
+            <a href="../admin/barang_masuk.html" class="menu-item" data-loading="true">
                 <span class="icon">🚚</span>
                 <span>Barang Masuk</span>
             </a>
-            <a href="../dashboard/barang_keluar.html" class="menu-item active" data-loading="true">
+            <a href="../admin/barang_keluar.html" class="menu-item active" data-loading="true">
                 <span class="icon">📦</span>
                 <span>Barang Keluar</span>
                 <span class="badge">8</span>
             </a>
-            <a href="../dashboard/generate_laporan.html" class="menu-item" data-loading="true">
+            <a href="../admin/generate_laporan.html" class="menu-item" data-loading="true">
                 <span class="icon">📝</span>
                 <span>Generate Laporan</span>
             </a>
-            <a href="../dashboard/riwayat_transaksi.html" class="menu-item" data-loading="true">
+            <a href="../admin/riwayat_transaksi.html" class="menu-item" data-loading="true">
                 <span class="icon">📜</span>
                 <span>Riwayat Transaksi</span>
             </a>
@@ -1093,11 +1093,11 @@
 
         <div class="menu-section">
             <div class="menu-label">Manajemen</div>
-            <a href="../dashboard/pengaturan.html" class="menu-item" data-loading="true">
+            <a href="../admin/pengaturan.html" class="menu-item" data-loading="true">
                 <span class="icon">⚙️</span>
                 <span>Pengaturan</span>
             </a>
-            <a href="../dashboard/notifikasi.html" class="menu-item" data-loading="true">
+            <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
                 <span class="icon">🔔</span>
                 <span>Notifikasi</span>
             </a>
