admin {kecuali generate_laporan}

--- a/public/dashboard/admin/barang_keluar.html
+++ b/public/dashboard/admin/barang_keluar.html
@@ -474,7 +474,7 @@
             </a>
             <a href="../admin/barang_keluar.html" class="menu-item active" data-loading="true">
                 <span class="icon">📦</span><span>Barang Keluar</span>
-                <span class="badge" id="sidebarBadge">0</span>
+               
             </a>
             <a href="../admin/generate_laporan.html" class="menu-item" data-loading="true">
                 <span class="icon">📝</span><span>Generate Laporan</span>
@@ -488,9 +488,9 @@
             <a href="../admin/pengaturan.html" class="menu-item" data-loading="true">
                 <span class="icon">⚙️</span><span>Pengaturan</span>
             </a>
-            <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
+            <!-- <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
                 <span class="icon">🔔</span><span>Notifikasi</span>
-            </a>
+            </a> -->
             <a href="#" class="menu-item" onclick="location.href='../pages/login.html'">
                 <span class="icon">🚪</span><span>Logout</span>
             </a>
@@ -516,9 +516,6 @@
                     <span class="icon">🔍</span>
                     <input type="text" id="searchInput" placeholder="Cari barang keluar...">
                 </div>
-                <button class="notification-btn">
-                    🔔<span class="notification-badge">5</span>
-                </button>
             </div>
         </div>
 
