--- a/public/dashboard/admin/dashboard.html
+++ b/public/dashboard/admin/dashboard.html
@@ -640,7 +640,7 @@
             <a href="../admin/barang_keluar.html" class="menu-item" data-loading="true">
                 <span class="icon">📦</span>
                 <span>Barang Keluar</span>
-                <span class="badge">8</span>
+               
             </a>
             <a href="../admin/generate_laporan.html" class="menu-item" data-loading="true">
                 <span class="icon">📝</span>
@@ -657,10 +657,10 @@
                 <span class="icon">⚙️</span>
                 <span>Pengaturan</span>
             </a>
-            <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
+            <!-- <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
                 <span class="icon">🔔</span>
                 <span>Notifikasi</span>
-            </a>
+            </a> -->
             <a href="#" class="menu-item" id="logoutMenuItem">
                 <span class="icon">🚪</span>
                 <span>Logout</span>
