--- a/public/dashboard/admin/kasir.html
+++ b/public/dashboard/admin/kasir.html
@@ -368,50 +368,41 @@
                 <span class="badge">ADMIN</span>
             </div>
         </div>
-        <a href="#" class="menu-item active">
-            <span class="icon">🖥️</span>
-            <span>Kasir</span>
+        <a href="../admin/kasir.html" class="menu-item active" data-loading="true">
+            <span class="icon">🖥️</span><span>Kasir</span>
         </a>
         <div class="menu-section">
             <div class="menu-label">Menu Utama</div>
-            <a href="#" class="menu-item" onclick="location.href='../admin/dashboard.html'">
-                <span class="icon">📊</span>
-                <span>Dashboard</span>
+            <a href="../admin/dashboard.html" class="menu-item" data-loading="true">
+                <span class="icon">📊</span><span>Dashboard</span>
             </a>
-            <a href="#" class="menu-item">
-                <span class="icon">🧾</span>
-                <span>Master Data</span>
+            <a href="../admin/master_data.html" class="menu-item" data-loading="true">
+                <span class="icon">🧾</span><span>Master Data</span>
             </a>
-            <a href="#" class="menu-item">
-                <span class="icon">🚚</span>
-                <span>Barang Masuk</span>
+            <a href="../admin/barang_masuk.html" class="menu-item " data-loading="true">
+                <span class="icon">🚚</span><span>Barang Masuk</span>
             </a>
-            <a href="#" class="menu-item">
-                <span class="icon">📦</span>
-                <span>Barang Keluar</span>
+            <a href="../admin/barang_keluar.html" class="menu-item " data-loading="true">
+                <span class="icon">📦</span><span>Barang Keluar</span>
+                
             </a>
-            <a href="#" class="menu-item">
-                <span class="icon">📝</span>
-                <span>Generate Laporan</span>
+            <a href="../admin/generate_laporan.html" class="menu-item" data-loading="true">
+                <span class="icon">📝</span><span>Generate Laporan</span>
             </a>
-            <a href="#" class="menu-item">
-                <span class="icon">📜</span>
-                <span>Riwayat Transaksi</span>
+            <a href="../admin/riwayat_transaksi.html" class="menu-item" data-loading="true">
+                <span class="icon">📜</span><span>Riwayat Transaksi</span>
             </a>
         </div>
         <div class="menu-section">
             <div class="menu-label">Manajemen</div>
-            <a href="#" class="menu-item">
-                <span class="icon">⚙️</span>
-                <span>Pengaturan</span>
+            <a href="../admin/pengaturan.html" class="menu-item" data-loading="true">
+                <span class="icon">⚙️</span><span>Pengaturan</span>
             </a>
-            <a href="#" class="menu-item">
-                <span class="icon">🔔</span>
-                <span>Notifikasi</span>
-            </a>
-            <a href="#" class="menu-item">
-                <span class="icon">🚪</span>
-                <span>Logout</span>
+            <!-- <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
+                <span class="icon">🔔</span><span>Notifikasi</span>
+            </a> -->
+            <a href="#" class="menu-item" onclick="location.href='../pages/login.html'">
+                <span class="icon">🚪</span><span>Logout</span>
             </a>
         </div>
     </aside>
