--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -666,7 +666,7 @@
                     } else if (email === userEmail && password === userPassword) {
 
                         showSuccess("Login berhasil sebagai User 🎉",
-                            "../dashboard/user/dashboard.html");
+                            "../dashboard/user/kasir.html");
 
                     } else {
 
