--- a/public/dashboard/admin/riwayat_transaksi.html
+++ b/public/dashboard/admin/riwayat_transaksi.html
@@ -896,6 +896,106 @@
             color: #94a3b8;
             font-size: 14px;
         }
+
+        .logout-modal {
+            position: fixed;
+            inset: 0;
+            background: rgba(12, 74, 110, 0.7);
+            backdrop-filter: blur(6px);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 3000;
+        }
+
+        .logout-modal.active {
+            display: flex;
+            animation: fadeIn 0.3s ease;
+        }
+
+        .logout-box {
+            background: rgba(255, 255, 255, 0.95);
+            padding: 35px;
+            border-radius: 25px;
+            text-align: center;
+            width: 350px;
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+            animation: slideUp 0.3s ease;
+        }
+
+        .logout-icon {
+            font-size: 55px;
+            margin-bottom: 15px;
+        }
+
+        .logout-box h3 {
+            color: #0c4a6e;
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+
+        .logout-box p {
+            color: #64748b;
+            font-size: 14px;
+            margin-bottom: 25px;
+        }
+
+        .logout-actions {
+            display: flex;
+            gap: 10px;
+        }
+
+        .logout-actions button {
+            flex: 1;
+            padding: 12px;
+            border-radius: 12px;
+            font-weight: 600;
+            cursor: pointer;
+            border: none;
+            transition: 0.3s;
+        }
+
+        .btn-cancel {
+            background: rgba(148, 163, 184, 0.2);
+            color: #475569;
+        }
+
+        .btn-cancel:hover {
+            background: rgba(148, 163, 184, 0.4);
+        }
+
+        .btn-confirm {
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+            color: white;
+            box-shadow: 0 6px 20px rgba(239, 68, 68, 0.4);
+        }
+
+        .btn-confirm:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(239, 68, 68, 0.5);
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(40px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
     </style>
 </head>
 
@@ -928,7 +1028,7 @@
             </a>
             <a href="../admin/barang_keluar.html" class="menu-item " data-loading="true">
                 <span class="icon">📦</span><span>Barang Keluar</span>
-              
+
             </a>
             <a href="../admin/generate_laporan.html" class="menu-item" data-loading="true">
                 <span class="icon">📝</span><span>Generate Laporan</span>
@@ -942,10 +1042,10 @@
             <a href="../admin/pengaturan.html" class="menu-item" data-loading="true">
                 <span class="icon">⚙️</span><span>Pengaturan</span>
             </a>
-           <!-- <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
+            <!-- <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
                 <span class="icon">🔔</span><span>Notifikasi</span>
             </a> -->
-            <a href="#" class="menu-item" onclick="location.href='../pages/login.html'">
+            <a href="#" class="menu-item logout-btn">
                 <span class="icon">🚪</span><span>Logout</span>
             </a>
         </div>
@@ -1602,6 +1702,43 @@
         // Real-time search
         searchTransaction.addEventListener('input', () => {
             applyFilterBtn.click();
+        });
+    </script>
+
+    <div class="logout-modal" id="logoutModal">
+        <div class="logout-box">
+            <div class="logout-icon">🚪</div>
+            <h3>Yakin ingin logout?</h3>
+            <p>Anda akan keluar dari sistem Kasir Mekar Jaya</p>
+            <div class="logout-actions">
+                <button class="btn-cancel" id="cancelLogout">Batal</button>
+                <button class="btn-confirm" id="confirmLogout">Ya, Logout</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const logoutBtn = document.querySelector('.logout-btn');
+        const logoutModal = document.getElementById('logoutModal');
+        const cancelLogout = document.getElementById('cancelLogout');
+        const confirmLogout = document.getElementById('confirmLogout');
+
+        logoutBtn.addEventListener('click', function (e) {
+            e.preventDefault();
+            logoutModal.classList.add('active');
+        });
+
+        cancelLogout.addEventListener('click', function () {
+            logoutModal.classList.remove('active');
+        });
+
+        confirmLogout.addEventListener('click', function () {
+            // Hapus session login
+            localStorage.removeItem('userLogin');
+            localStorage.removeItem('userRole');
+
+            // Redirect (PATH TERBARU)
+            window.location.href = '../../pages/login.html';
         });
     </script>
 </body>
