--- a/public/dashboard/user/barang_masuk.html
+++ b/public/dashboard/user/barang_masuk.html
@@ -1103,37 +1103,23 @@
             <span class="icon">🎣</span>
             <div>
                 <h2>Mekar Jaya</h2>
-                <span class="badge">ADMIN</span>
+                <span class="badge">USER</span>
             </div>
         </div>
-        <a href="../admin/kasir.html" class="menu-item" data-loading="true">
+        <a href="../user/kasir.html" class="menu-item " data-loading="true">
             <span class="icon">🖥️</span><span>Kasir</span>
         </a>
         <div class="menu-section">
             <div class="menu-label">Menu Utama</div>
-            <a href="../admin/dashboard.html" class="menu-item" data-loading="true">
-                <span class="icon">📊</span><span>Dashboard</span>
-            </a>
-            <a href="../admin/master_data.html" class="menu-item" data-loading="true">
-                <span class="icon">🧾</span><span>Master Data</span>
-            </a>
-            <a href="../admin/barang_masuk.html" class="menu-item active" data-loading="true">
+
+            <a href="../user/barang_masuk.html" class="menu-item active " data-loading="true">
                 <span class="icon">🚚</span><span>Barang Masuk</span>
             </a>
-            <a href="../admin/barang_keluar.html" class="menu-item " data-loading="true">
-                <span class="icon">📦</span><span>Barang Keluar</span>
 
-            </a>
-            <a href="../admin/generate_laporan.html" class="menu-item" data-loading="true">
-                <span class="icon">📝</span><span>Generate Laporan</span>
-            </a>
-            <a href="../admin/riwayat_transaksi.html" class="menu-item" data-loading="true">
-                <span class="icon">📜</span><span>Riwayat Transaksi</span>
-            </a>
         </div>
         <div class="menu-section">
             <div class="menu-label">Manajemen</div>
-            <a href="../admin/pengaturan.html" class="menu-item" data-loading="true">
+            <a href="../user/pengaturan.html" class="menu-item" data-loading="true">
                 <span class="icon">⚙️</span><span>Pengaturan</span>
             </a>
             <!-- <a href="../admin/notifikasi.html" class="menu-item" data-loading="true">
